<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_produto"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codigo_produto"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preco"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edtQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantidade_estoque"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar_produto" />

        <Button
            android:id="@+id/btnLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_produtos" />

    </LinearLayout>
</ScrollView>